@@ -1,3 +1,9 @@
+2002-02-28 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* user_home.c: new utility to report users home directory.
+	* configure.in: check for password file stuff etc.
+	* GNUmakefile.in: build user_home
+
 Thu Feb 28 14:35:27 2002  Nicola Pero  <nicola@brainstorm.co.uk>
 
 	* Instance/rules.make (.PHONY): Declare here as .PHONY
